<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="Home"
            android:visible="false"
            android:icon="@drawable/ic_nav_home"
            app:actionLayout="@layout/nav_right_arrow" />
        <item
            android:id="@+id/nav_freeCahrging"
            android:icon="@drawable/ic_add"
            android:title="@string/star_charging_station"
            app:actionLayout="@layout/nav_right_arrow" />
        <item
            android:id="@+id/nav_sendStar"
            android:icon="@drawable/ic_nav_gift"
            android:title="@string/str_send_a_star"
            app:actionLayout="@layout/nav_right_arrow" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/str_history"
            app:actionLayout="@layout/nav_right_arrow" />

        <item

            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_nav_question"
            app:actionLayout="@layout/nav_right_arrow"
            android:title="@string/str_ranking_star_user_guide" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_nav_note"
            app:actionLayout="@layout/nav_right_arrow"
            android:title="@string/str_notice" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_nav_notification"

            app:actionLayout="@layout/nav_right_arrow"
            android:title="@string/str_notification" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_technical_support"
            app:actionLayout="@layout/nav_right_arrow"
            android:title="@string/str_settings" />


    </group>

    <!--    <item android:title="Communicate">-->
    <!--        <menu>-->
    <!--            <item-->
    <!--                android:id="@+id/nav_share"-->
    <!--                android:icon="@drawable/ic_menu_share"-->
    <!--                android:title="@string/menu_share" />-->
    <!--            <item-->
    <!--                android:id="@+id/nav_send"-->
    <!--                android:icon="@drawable/ic_menu_send"-->
    <!--                android:title="@string/menu_send" />-->
    <!--        </menu>-->
    <!--    </item>-->

</menu>
