<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top"
                android:background="@color/colorAccent"
                android:drawableTint="#ffffff"
                android:fontFamily="@font/nanumbarun_gothic_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/giftWarining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:fontFamily="@font/nanumbarun_gothic"
            android:gravity="center"
            android:text="@string/str_login_first"
            android:textSize="14sp"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnpopuploginok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:fontFamily="@font/nanumbarun_gothic"
            android:background="@color/text_color_white"
            android:text="@string/str_ok" />

    </LinearLayout>

</androidx.cardview.widget.CardView>